# AI-Knowledge-Continuity-System

./: .env.example  .gitignore  DEPLOYMENT_GUIDE.md  DEPLOYMENT_QUICK_REFERENCE.md  DEPLOY_NOW.md  FINAL_PRODUCTION_GUIDE.md  FIXES_APPLIED.md  FREE_DEPLOYMENT_GUIDE.md  PRODUCTION_DEPLOYMENT.md  PRODUCTION_DEPLOYMENT_GUIDE.md  PRODUCTION_READY_FINAL.md  QUICK_START.md  RAILWAY_BACKEND_DOWN_FIX.md  README.md  URGENT_FIX_MALFORMED_URL.md  VERCEL_DEPLOYMENT.md  app.db  deployment-check.sh  main.py  package-lock.json  pyproject.toml  rebuild_vector_store.py  render.yaml  requirements.txt  run.sh  save_logo_instructions.md  setup_supabase.sql  vercel.json
backend/: __init__.py  auth.py  db.py  db_sqlite_backup.py  main.py  supabase_client.py
backend/api/: __init__.py  deps.py
backend/api/routes/: __init__.py  auth.py  (+6 more)
backend/core/: __init__.py  config.py  exceptions.py  lifecycle.py  logging.py
backend/schemas/: __init__.py  health.py  ingest.py  knowledge_gap.py  query.py
backend/services/: __init__.py  ingest_service.py  rag_service.py  validation_service.py
backend/uploads/: 5c83a88e91d44501afda1a865226cf5f_project_x_system_design.txt  6fb93d23f6ca49878ca07e40a8dccdc7_technology_stack_rationale.md  8cf16ee67a854003a38ce6c6df6b9f87_architecture_decisions.md  9c4ef0fcac7e43d29741efbf2355cb27_employee_exit_knowledge.txt  c380001c626a4e2b90bc85320573f974_meeting_notes_backend.txt  d38e6230f7524514845e6b12950ee2a5_technical_guide_api_docs.md
config/: __init__.py  settings.py
core/: __init__.py  exceptions.py  logger.py
data/: architecture_decisions.md  best_practices.md  retrospective_lessons_learned.md  sample_onboarding_guide.md
evaluation/: __init__.py  metrics.py
frontend/: .env.example  .env.production  .env.production.example  ARCHITECTURE.md  DEPLOYMENT.md  README.md  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css
ingestion/: __init__.py  chunk_documents.py  load_documents.py
knowledge/: __init__.py  decision_parser.py  gap_detector.py  knowledge_classifier.py  validator.py
memory/: __init__.py  conversation_memory.py
rag/: __init__.py  custom_llm.py  knowledge_retriever.py  llm.py  prompt.py  qa_chain.py  retriever.py
tests/: test_evaluation.py  test_features_quick.py  test_full_system.py  test_ingestion.py  test_knowledge_features.py  test_rag.py
ui/: __init__.py  app.py
vector_store/: __init__.py  create_store.py  qdrant_store.py
vector_store/faiss_index_backup_20260208_204818/: index.faiss  index.pkl
vector_store/faiss_index_backup_20260208_204819/: index.faiss  index.pkl
vector_store/faiss_index_backup_20260208_205218/: index.faiss  index.pkl
vector_store/faiss_index_backup_20260208_220102/: index.faiss  index.pkl
(+31 files in other folders)
