[project]
name = "ai-knowledge-continuity-system"
version = "1.0.0"
description = "AI-powered system for preserving organizational knowledge using RAG and LLMs"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
keywords = [
    "rag",
    "langchain",
    "knowledge-management",
    "llm",
    "ai",
    "vector-search",
    "organizational-knowledge"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "langchain>=0.2.0",
    "langchain-community>=0.2.0",
    "langchain-core>=0.2.0",
    "langchain-huggingface>=0.0.3",
    "langchain-google-genai>=1.0.0",
    "google-generativeai>=0.5.0",
    "transformers>=4.40.0",
    "sentence-transformers>=2.7.0",
    "faiss-cpu>=1.8.0",
    "pypdf>=4.0.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.0",
    "streamlit>=1.33.0",
    "tqdm>=4.66.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "black>=24.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]
local-llm = [
    "accelerate>=0.30.0",
    "bitsandbytes>=0.43.0",
    "torch>=2.0.0",
]

[project.scripts]
knowledge-system = "main:main"

[project.urls]
Homepage = "https://github.com/yourusername/ai-knowledge-continuity-system"
Documentation = "https://github.com/yourusername/ai-knowledge-continuity-system#readme"
Repository = "https://github.com/yourusername/ai-knowledge-continuity-system"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["config*", "core*", "ingestion*", "vector_store*", "rag*", "memory*", "evaluation*", "ui*"]

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'
exclude = '''
/(
    \.git
    | \.venv
    | __pycache__
    | \.mypy_cache
)/
'''

[tool.ruff]
line-length = 100
select = ["E", "F", "W", "I", "N", "UP", "ANN", "B", "C4", "SIM"]
ignore = ["ANN101", "ANN102", "ANN401"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=. --cov-report=html"
